--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -8,7 +8,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;user=TammarChen;password=216295204;database=tododb;"
+         "DefaultConnection": "server=b5niehg2qpdhe0uidkx9-mysql.services.clever-cloud.com;user=uzbunfbsjplfq0bv;password=b0hGJrGbT9kRthmkcrl0;database=b5niehg2qpdhe0uidkx9;"
     }
   }
 
